# cred

./: .gitignore  AGENTS.md  Cargo.toml  README.md
contracts/: README.md
contracts/schemas/: cred-agent.schema.json
crates/cred-cli/: Cargo.toml
crates/cred-cli/src/: commands.rs  grant.rs  key.rs  main.rs  presentation.rs  record.rs  service.rs  simple.rs  tests.rs  util.rs  vault.rs
crates/cred-cli/src/adapters/: freebird.rs  matchlock.rs  mod.rs  social_graph.rs  witness.rs
crates/cred-cli/src/service/: http.rs  mod.rs
crates/cred-core/: Cargo.toml
crates/cred-core/src/: lib.rs
crates/cred-core/tests/: social_graph_presentation_test.rs
crates/cred-store/: Cargo.toml
crates/cred-store/src/: lib.rs
docs/: cred-stdio-service.md  cred-v1.md  social-graph-adapter.md
examples/: action-request.json  freebird-check-request.json  freebird-permission-grant.json  freebird-presentation-request.json  freebird-verify-request-consuming.json  manifest.json  matchlock-commitment.json  matchlock-match-token.json  matchlock-nullifier.json  matchlock-permission-grant.json  matchlock-presentation-request.json  permission-grant.json  presentation.json  social-graph-attestation.json  social-graph-permission-grant.json  social-graph-presentation-request.json  witness-permission-grant.json  witness-presentation-request.json  witness-signed-attestation.json
examples/stdio-service/: requests.jsonl  responses.example.jsonl
scripts/: freebird-adapter-smoke-check.mjs  freebird-adapter-smoke.sh  http-service-smoke.mjs  http-service-smoke.sh  matchlock-adapter-smoke-check.mjs  matchlock-adapter-smoke.sh  stdio-service-smoke.mjs  stdio-service-smoke.sh  vault-smoke-check.mjs  vault-smoke.sh  witness-adapter-smoke-check.mjs  witness-adapter-smoke.sh
