[package]
name = "cred-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cred v1 artifact types and canonical hashing"

[dependencies]
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
