[package]
name = "cred-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cred v1 artifact types and canonical hashing"

[dependencies]
ed25519-dalek.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
