[package]
name = "cred-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Durable local record store for Cred artifact metadata"

[dependencies]
chacha20poly1305.workspace = true
cred-core.workspace = true
hex.workspace = true
scrypt.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
zeroize.workspace = true
